# dfg-network

./: README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: ForceGraph.tsx
frontend/src/data/: data.json
graphs/: graph_construction.ipynb  json_output.json
slack-scraper/: .example.env  .gitignore  components.py  run_scraper.py  settings.py
