[tool.poetry]
name = "dfg-network"
version = "0.1.0"
description = ""
authors = ["mach-12 <mann.compi@gmail.com>"]
readme = "README.md"
packages = [{include = "dfg"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
